[package]
name = "seed-decoder"
version = "0.1.0"
edition = "2021"
description = "Tari seed phrase decoder"

[dependencies]
# Core Tari dependencies
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git" }

# Crypto dependencies
blake2 = "0.10"
chacha20 = "0.7.1"
argon2 = { version = "0.4.1", features = ["std", "alloc"] }
digest = "0.10"
subtle = "2.4"
zeroize = "1.5"

# Utility dependencies
base58 = "0.2.0"
crc32fast = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
derivative = "2.2.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.22"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }

# Required for cipher traits
cipher = "0.4"
anyhow = "1.0.98"
keyring = { version = "3", features = ["windows-native", "linux-native", "apple-native"] }
serde_cbor = "0.11.2"
